content chnage in index html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <h2 class="st-text-block-title">Hi There! I'm Ali Ahmed Muhsin</h2>
                 <h4 class="st-text-block-subtitle">Videographer / Photographer</h4>
                 <div class="st-text-block-text">
-                  <p>As a photographer, my goal is to capture images that not only document but also inspire and evoke emotion. I strive to create photographs that tell a story and elicit a response from viewers, whether it's a feeling of joy, awe, or empathy.</p>
+                  <p>As a Videographer and photographer, my goal is to capture images that not only document but also inspire and evoke emotion. I strive to create photographs that tell a story and elicit a response from viewers, whether it's a feeling of joy, awe, or empathy.</p>
                 </div>
                 <ul class="st-text-block-details st-mp0">
                   <li><span>Birthday</span> : <span>Sep 01 1996</span></li>
@@ -226,11 +226,8 @@
             <h2 class="st-iconbox-title">Videography</h2>
             <div class="st-iconbox-text">Event videography,
               Commercial videography,
-              Product videography,
-              Corporate videography,
               Music video production,
-              Training and instructional videos,
-              Promotional videos</div>
+              Training and instructional videos</div>
           </div>
           <div class="st-height-b30 st-height-lg-b30"></div>
         </div><!-- .col -->
@@ -296,7 +293,7 @@
                 of work are mentioned.</h2>
               <div class="st-skill-subtitle">Creative editor with 8+ years of experience in editing, photography and videography. Worked exclusively with mega influencers (youtubers, tiktokers and musicians). I’ve been a production team leader for 2 years.
                 
-               <br><br>My focus is on digital branding photography, where I work with clients to create images that align with their brand messaging and values. I believe that photography has the power to communicate a brand's essence in a way that words alone cannot.
+               <br><br>My focus is on digital branding videography and photography, where I work with clients to create images that align with their brand messaging and values. I believe that photography has the power to communicate a brand's essence in a way that words alone cannot.
               </div>
             </div><!-- .st-skill-heading -->
           </div>
