update cv and hero img

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </g>
                   </g>
                 </svg>
-                <div class="sp-phone-no">+971 58 596 9333</div>
+                <div class="sp-phone-no">+971 58 502 5082</div>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
     </div>
     <!-- Hero Image - Social Link Group -->
     <div class="st-hero-img st-to-right">
-      <img class="wow fadeInRight" src="assets/img/section/swagy.jpeg" alt="Hero">
+      <img class="wow fadeInRight" src="assets/img/section/IMG_1683.PNG" alt="Hero">
       <div class="st-social-group wow fadeInLeft">
         <div class="st-social-link">
           <a href="https://www.facebook.com/aloo.cent" class="st-social-btn active">
@@ -98,14 +98,19 @@
             <span class="st-social-icon"><i class="fab fa-twitter"></i></span>
             <span class="st-icon-name">Twitter</span>
           </a>
-          <a href="https://www.linkedin.com/in/ali-muhsin-4a8823160" class="st-social-btn">
+          <a href="https://www.linkedin.com/in/ali-ahmed-muhsin-4a8823160?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+            class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
             <span class="st-icon-name">LinkedIn</span>
           </a>
+          <a href="https://www.tiktok.com/@thirteen.31?_t=8lnvWQXpkZU&_r=1" class="st-social-btn">
+            <span class="st-social-icon"><i class="fab fa-tiktok"></i></span>
+            <span class="st-icon-name">Toktok</span>
+          </a>
+
         </div>
       </div>
-    </div>
-    <div id="particles-js"></div>
+      <div id="particles-js"></div>
   </section>
   <!-- End Hero Seciton -->
 
@@ -123,7 +128,7 @@
       <div class="row">
         <div class="col-lg-6 wow fadeInLeft">
           <div class="st-about-img-wrap">
-            <div class="st-about-img st-dynamic-bg st-bg" data-src="assets/img/section/swaggy1.jpeg"></div>
+            <div class="st-about-img st-dynamic-bg st-bg" data-src="assets/img/section/IMG_1683.PNG"></div>
           </div>
           <div class="st-height-b0 st-height-lg-b30"></div>
         </div>
@@ -140,7 +145,7 @@
                 </div>
                 <ul class="st-text-block-details st-mp0">
                   <li><span>Birthday</span> : <span>Sep 01 1996</span></li>
-                  <li><span>Phone</span> : <span>+971 58 502 5082 </span></li>
+                  <li><span>Phone</span> : <span>+971 58 502 5082</span></li>
                   <li><span>Email</span> : <span>swaggyink814@gmail.com</span></li>
                   <li><span>From</span> : <span>Iraq</span></li>
                   <li><span>Language</span> : <span>English, Arabic</span></li>
@@ -411,11 +416,34 @@
 
             <div class="st-resume-timeline-wrap">
               <div class="st-resume-timeline">
+                <h3 class="st-resume-timeline-title">Videographer</h3>
+                <div class="st-resume-timeline-duration">June 2023 - Present</div>
+                <h4 class="st-resume-timeline-subtitle">Kyan Creative Studio, Dubai</h4>
+                <div class="st-resume-timeline-text">
+                  <p>Operated a wide range of professional cameras including DSLRs', REDs, and ENG Cameras.</p>
+                  <p>Delivered projects on time while adhering ot strict deadlines under pressure.</p>
+                </div>
+              </div> <!-- st-resume-timeline -->
+              <div class="st-height-b50 st-height-lg-b30"></div>
+              <!-- new -->
+              <div class="st-resume-timeline">
+                <h3 class="st-resume-timeline-title">Videographer, </h3>
+                <div class="st-resume-timeline-duration">September 2022 - May 2023</div>
+                <h4 class="st-resume-timeline-subtitle">freelance, Dubai</h4>
+                <div class="st-resume-timeline-text">
+                  <p>Experienced in setting up lighting fixtures, including soft boxes, umbrellas, scrims, and flags, sa
+                    wel as adjusting exposure setings accordingly.</p>
+                </div>
+              </div> <!-- st-resume-timeline -->
+              <div class="st-height-b50 st-height-lg-b30"></div>
+
+              <div class="st-resume-timeline">
                 <h3 class="st-resume-timeline-title">Videographer, Photographer Editor</h3>
-                <div class="st-resume-timeline-duration">August 2021 - Present</div>
+                <div class="st-resume-timeline-duration">August 2021 - August 2022</div>
                 <h4 class="st-resume-timeline-subtitle">Divine Invention Agency, Dubai</h4>
                 <div class="st-resume-timeline-text">
-                  <p>Collaborated with different companies for video and photo shoots (UFC gym, Zawaya gaming, Zayed the
+                  <p>Collaborated with different companies for video and photo shoots (UFC gym, Zawaya gaming, Zayed
+                    the
                     inspirer)</p>
                 </div>
               </div> <!-- st-resume-timeline -->
@@ -429,15 +457,7 @@
                 </div>
               </div> <!-- st-resume-timeline -->
               <div class="st-height-b50 st-height-lg-b30"></div>
-              <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Video Editor, Tiktok Management</h3>
-                <div class="st-resume-timeline-duration">May 2020- June 2021</div>
-                <h4 class="st-resume-timeline-subtitle">Pipa Media Agency, Dubai</h4>
-                <div class="st-resume-timeline-text">
-                  <p>Collaborated with companies as a video and photo editor for commercial shoots, events, and car
-                    advertisements</p>
-                </div>
-              </div> <!-- st-resume-timeline -->
+
 
             </div>
           </div>
@@ -455,40 +475,51 @@
 
             <div class="st-resume-timeline-wrap">
               <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Videography, Photography and Editor</h3>
-                <div class="st-resume-timeline-duration">January 2015- March 2020</div>
-                <h4 class="st-resume-timeline-subtitle">Influencers, Dubai</h4>
+                <h3 class="st-resume-timeline-title">Video Editor, Tiktok Management</h3>
+                <div class="st-resume-timeline-duration">May 2020- June 2021</div>
+                <h4 class="st-resume-timeline-subtitle">Pipa Media Agency, Dubai</h4>
                 <div class="st-resume-timeline-text">
-                  <p>Worked with mega influencers ‘Noor Stars’, ‘Baneen Stars’, ‘Amy Roko’ and ‘Mo Vlogs’</p>
-                  <br>
-                  <p>
-                    Provided youtube ideas, filmed videos for their platforms (youtube, tiktok and
-                    instagram)
-                  </p>
-                  <br>
-                  <p>Shot and edited thumbnails for their youtube videos using Photoshop</p>
+                  <p>Collaborated with companies as a video and photo editor for commercial shoots, events, and car
+                    advertisements</p>
                 </div>
-              </div> <!-- st-resume-timeline -->
-              <div class="st-height-b50 st-height-lg-b30"></div>
-              <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Videography, Photography and Editor</h3>
-                <div class="st-resume-timeline-duration">November 2013- December 2014</div>
-                <h4 class="st-resume-timeline-subtitle">Al Marra, Dubai</h4>
-                <div class="st-resume-timeline-text">
-                  <p>Video and photo editor for the company’s youtube channel and instagram posts</p>
-                  <br>
-                  <p>
-                    Collaborated with influencers as a personal photographer (Lojian Omran)
-                  </p>
-                </div>
-              </div> <!-- st-resume-timeline -->
+                <div class="st-height-b50 st-height-lg-b30"></div>
 
+
+                <div class="st-resume-timeline">
+                  <h3 class="st-resume-timeline-title">Videography, Photography and Editor</h3>
+                  <div class="st-resume-timeline-duration">January 2015- March 2020</div>
+                  <h4 class="st-resume-timeline-subtitle">Influencers, Dubai</h4>
+                  <div class="st-resume-timeline-text">
+                    <p>Worked with mega influencers ‘Noor Stars’, ‘Baneen Stars’, ‘Amy Roko’ and ‘Mo Vlogs’</p>
+                    <br>
+                    <p>
+                      Provided youtube ideas, filmed videos for their platforms (youtube, tiktok and
+                      instagram)
+                    </p>
+                    <br>
+                    <p>Shot and edited thumbnails for their youtube videos using Photoshop</p>
+                  </div>
+                </div> <!-- st-resume-timeline -->
+                <div class="st-height-b50 st-height-lg-b30"></div>
+                <div class="st-resume-timeline">
+                  <h3 class="st-resume-timeline-title">Videography, Photography and Editor</h3>
+                  <div class="st-resume-timeline-duration">November 2013- December 2014</div>
+                  <h4 class="st-resume-timeline-subtitle">Al Marra, Dubai</h4>
+                  <div class="st-resume-timeline-text">
+                    <p>Video and photo editor for the company’s youtube channel and instagram posts</p>
+                    <br>
+                    <p>
+                      Collaborated with influencers as a personal photographer (Lojian Omran)
+                    </p>
+                  </div>
+                </div> <!-- st-resume-timeline -->
+
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="st-height-b100 st-height-lg-b80"></div>
+      <div class="st-height-b100 st-height-lg-b80"></div>
   </section>
   <!-- End Resume Seciton -->
 
@@ -716,9 +747,14 @@
                   <span class="st-social-icon"><i class="fab fa-twitter"></i></span>
                   <span class="st-icon-name">Twitter</span>
                 </a>
-                <a href="https://www.linkedin.com/in/ali-muhsin-4a8823160" class="st-social-btn">
+                <a href="https://www.linkedin.com/in/ali-ahmed-muhsin-4a8823160?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+                  class="st-social-btn">
                   <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
                   <span class="st-icon-name">LinkedIn</span>
+                </a>
+                <a href="https://www.tiktok.com/@thirteen.31?_t=8lnvWQXpkZU&_r=1" class="st-social-btn">
+                  <span class="st-social-icon"><i class="fab fa-tiktok"></i></span>
+                  <span class="st-icon-name">Toktok</span>
                 </a>
               </div>
             </div>
