added order on profile

--- a/index.html
+++ b/index.html
@@ -449,16 +449,18 @@
               </div> <!-- st-resume-timeline -->
               <div class="st-height-b50 st-height-lg-b30"></div>
               <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Real Estate Photographer</h3>
-                <div class="st-resume-timeline-duration">February 2019 - May 2021</div>
-                <h4 class="st-resume-timeline-subtitle">Mood Properties, Dubai</h4>
+
+
+
+                <h3 class="st-resume-timeline-title">Video Editor, Tiktok Management</h3>
+                <div class="st-resume-timeline-duration">May 2020- June 2021</div>
+                <h4 class="st-resume-timeline-subtitle">Pipa Media Agency, Dubai</h4>
                 <div class="st-resume-timeline-text">
-                  <p>Captured 200+ properties for listings,Took walk through videos of the properties for listings</p>
+                  <p>Collaborated with companies as a video and photo editor for commercial shoots, events, and car
+                    advertisements</p>
                 </div>
-              </div> <!-- st-resume-timeline -->
+              </div>
               <div class="st-height-b50 st-height-lg-b30"></div>
-
-
             </div>
           </div>
         </div>
@@ -474,52 +476,55 @@
             <div class="st-height-b50 st-height-lg-b30"></div>
 
             <div class="st-resume-timeline-wrap">
+
               <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Video Editor, Tiktok Management</h3>
-                <div class="st-resume-timeline-duration">May 2020- June 2021</div>
-                <h4 class="st-resume-timeline-subtitle">Pipa Media Agency, Dubai</h4>
+                <h3 class="st-resume-timeline-title">Real Estate Photographer</h3>
+                <div class="st-resume-timeline-duration">February 2019 - May 2021</div>
+                <h4 class="st-resume-timeline-subtitle">Mood Properties, Dubai</h4>
                 <div class="st-resume-timeline-text">
-                  <p>Collaborated with companies as a video and photo editor for commercial shoots, events, and car
-                    advertisements</p>
+                  <p>Captured 200+ properties for listings,Took walk through videos of the properties for listings</p>
                 </div>
-                <div class="st-height-b50 st-height-lg-b30"></div>
+              </div> <!-- st-resume-timeline -->
 
 
-                <div class="st-resume-timeline">
-                  <h3 class="st-resume-timeline-title">Videography, Photography and Editor</h3>
-                  <div class="st-resume-timeline-duration">January 2015- March 2020</div>
-                  <h4 class="st-resume-timeline-subtitle">Influencers, Dubai</h4>
-                  <div class="st-resume-timeline-text">
-                    <p>Worked with mega influencers ‘Noor Stars’, ‘Baneen Stars’, ‘Amy Roko’ and ‘Mo Vlogs’</p>
-                    <br>
-                    <p>
-                      Provided youtube ideas, filmed videos for their platforms (youtube, tiktok and
-                      instagram)
-                    </p>
-                    <br>
-                    <p>Shot and edited thumbnails for their youtube videos using Photoshop</p>
-                  </div>
-                </div> <!-- st-resume-timeline -->
-                <div class="st-height-b50 st-height-lg-b30"></div>
-                <div class="st-resume-timeline">
-                  <h3 class="st-resume-timeline-title">Videography, Photography and Editor</h3>
-                  <div class="st-resume-timeline-duration">November 2013- December 2014</div>
-                  <h4 class="st-resume-timeline-subtitle">Al Marra, Dubai</h4>
-                  <div class="st-resume-timeline-text">
-                    <p>Video and photo editor for the company’s youtube channel and instagram posts</p>
-                    <br>
-                    <p>
-                      Collaborated with influencers as a personal photographer (Lojian Omran)
-                    </p>
-                  </div>
-                </div> <!-- st-resume-timeline -->
+              <div class="st-height-b50 st-height-lg-b30"></div>
 
-              </div>
+
+              <div class="st-resume-timeline">
+                <h3 class="st-resume-timeline-title">Videography, Photography and Editor</h3>
+                <div class="st-resume-timeline-duration">January 2015- March 2020</div>
+                <h4 class="st-resume-timeline-subtitle">Influencers, Dubai</h4>
+                <div class="st-resume-timeline-text">
+                  <p>Worked with mega influencers ‘Noor Stars’, ‘Baneen Stars’, ‘Amy Roko’ and ‘Mo Vlogs’</p>
+                  <br>
+                  <p>
+                    Provided youtube ideas, filmed videos for their platforms (youtube, tiktok and
+                    instagram)
+                  </p>
+                  <br>
+                  <p>Shot and edited thumbnails for their youtube videos using Photoshop</p>
+                </div>
+              </div> <!-- st-resume-timeline -->
+              <div class="st-height-b50 st-height-lg-b30"></div>
+              <div class="st-resume-timeline">
+                <h3 class="st-resume-timeline-title">Videography, Photography and Editor</h3>
+                <div class="st-resume-timeline-duration">November 2013- December 2014</div>
+                <h4 class="st-resume-timeline-subtitle">Al Marra, Dubai</h4>
+                <div class="st-resume-timeline-text">
+                  <p>Video and photo editor for the company’s youtube channel and instagram posts</p>
+                  <br>
+                  <p>
+                    Collaborated with influencers as a personal photographer (Lojian Omran)
+                  </p>
+                </div>
+              </div> <!-- st-resume-timeline -->
+
             </div>
           </div>
         </div>
       </div>
-      <div class="st-height-b100 st-height-lg-b80"></div>
+    </div>
+    <div class="st-height-b100 st-height-lg-b80"></div>
   </section>
   <!-- End Resume Seciton -->
 
@@ -608,13 +613,13 @@
         <div class="col-lg-4 col-md-6">
           <div class="st-portfolio-single st-style1 st-lightgallery">
             <div class="st-portfolio-item">
-              <a href="assets/img/portfolio/amy.jpeg" class="st-portfolio st-zoom st-lightbox-item">
+              <a href="assets/img/portfolio/new/rasem.jpg" class="st-portfolio st-zoom st-lightbox-item">
                 <div class="st-portfolio-img st-zoom-in">
-                  <img src="assets/img/portfolio/amy.jpeg" alt="portfolio">
+                  <img src="assets/img/portfolio/new/rasem.jpg" alt="portfolio">
                 </div>
                 <div class="st-portfolio-item-hover">
                   <i class="fas fa-plus-circle"></i>
-                  <h5>Amy Roko</h5>
+                  <h5>Rasem</h5>
                   <p>Influencers / Modeling</p>
                 </div>
               </a>
@@ -647,6 +652,22 @@
                 <div class="st-portfolio-item-hover">
                   <i class="fas fa-plus-circle"></i>
                   <h5>Lojain omran</h5>
+                  <p>Influencers / Modeling</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="st-portfolio-single st-style1 st-lightgallery">
+            <div class="st-portfolio-item">
+              <a href="assets/img/portfolio/new/helmt.jpg" class="st-portfolio st-zoom st-lightbox-item">
+                <div class="st-portfolio-img st-zoom-in">
+                  <img src="assets/img/portfolio/new/helmt.jpg" alt="portfolio">
+                </div>
+                <div class="st-portfolio-item-hover">
+                  <i class="fas fa-plus-circle"></i>
+                  <h5>Helmt</h5>
                   <p>Influencers / Modeling</p>
                 </div>
               </a>
