video image aded and seriice box size update

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
-<head>
+<head>`
   <!-- Meta Tags -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -270,7 +270,6 @@
             <div class="st-iconbox-text">
               Video Editing,
               Photo Editing,
-
             </div>
           </div>
           <div class="st-height-b30 st-height-lg-b30"></div>
