--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <ul class="st-text-block-details st-mp0">
                   <li><span>Birthday</span> : <span>Sep 01 1996</span></li>
                   <li><span>Phone</span> : <span>+971 58 502 5082</span></li>
-                  <li><span>Email</span> : <span>swaggyink814@gmail.com</span></li>
+                  <li><span>Email</span> : <span>Aliahmedmuhsinh@gmail.com</span></li>
                   <li><span>From</span> : <span>Iraq</span></li>
                   <li><span>Language</span> : <span>English, Arabic</span></li>
                   <li><span>Freelance</span> : <span>Available</span></li>
@@ -735,7 +735,7 @@
               <i class="fas fa-envelope"></i>
               <div class="st-single-info-details">
                 <h4>Email</h4>
-                <a href="mailto: swaggyink814@gmail.com">swaggyink814@gmail.com</a>
+                <a href="mailto:Aliahmedmuhsinh@gmail.com">Aliahmedmuhsinh@gmail.com</a>
               </div>
             </div>
             <div class="st-single-contact-info">
