Refactor portfolio data structure and enhance gallery functionality; update text formatting in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="st-hero st-style1 st-ripple-version">
       <div class="container">
         <div class="st-hero-text">
-          <h3>Hello, I’m</h3>
+          <h3>Hello, I'm</h3>
           <h1>Ali Ahmed <br>Muhsin
           </h1>
           <h2>Videographer / Photographer</h2>
@@ -300,7 +300,7 @@
               <h2 class="st-skill-title">All the skills that I have in that field
                 of work are mentioned.</h2>
               <div class="st-skill-subtitle">Creative editor with 8+ years of experience in editing, photography and
-                videography. Worked exclusively with mega influencers (youtubers, tiktokers and musicians). I’ve been a
+                videography. Worked exclusively with mega influencers (youtubers, tiktokers and musicians). I've been a
                 production team leader for 2 years.
 
                 <br><br>My focus is on digital branding videography and photography, where I work with clients to create
@@ -494,7 +494,7 @@
                 <div class="st-resume-timeline-duration">January 2015- March 2020</div>
                 <h4 class="st-resume-timeline-subtitle">Influencers, Dubai</h4>
                 <div class="st-resume-timeline-text">
-                  <p>Worked with mega influencers ‘Noor Stars’, ‘Baneen Stars’, ‘Amy Roko’ and ‘Mo Vlogs’</p>
+                  <p>Worked with mega influencers 'Noor Stars', 'Baneen Stars', 'Amy Roko' and 'Mo Vlogs'</p>
                   <br>
                   <p>
                     Provided youtube ideas, filmed videos for their platforms (youtube, tiktok and
@@ -510,7 +510,7 @@
                 <div class="st-resume-timeline-duration">November 2013- December 2014</div>
                 <h4 class="st-resume-timeline-subtitle">Al Marra, Dubai</h4>
                 <div class="st-resume-timeline-text">
-                  <p>Video and photo editor for the company’s youtube channel and instagram posts</p>
+                  <p>Video and photo editor for the company's youtube channel and instagram posts</p>
                   <br>
                   <p>
                     Collaborated with influencers as a personal photographer (Lojian Omran)
@@ -538,149 +538,10 @@
       <div class="st-height-b25 st-height-lg-b25"></div>
     </div>
 
-
-    <div class="container image-load-more">
-
-
+    <div class="container">
       <div class="row" id="card-container">
-
-
+        <!-- Portfolio items will be dynamically inserted here -->
       </div>
-
-
-      <!-- second -->
-      <div class="row st-portfolio-loading-display-none">
-
-
-        <div class="col-lg-4 col-md-6">
-          <div class="st-portfolio-single st-style1 st-lightgallery">
-            <div class="st-portfolio-item">
-              <a href="assets/img/portfolio/portfolio3.JPG" class="st-portfolio st-zoom st-lightbox-item">
-                <div class="st-portfolio-img st-zoom-in">
-                  <img src="assets/img/portfolio/portfolio3.JPG" alt="portfolio">
-                </div>
-                <div class="st-portfolio-item-hover">
-                  <i class="fas fa-plus-circle"></i>
-                  <h5>TheRealMood</h5>
-                  <p>Influencers / Marketing</p>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="st-portfolio-single st-style1 st-lightgallery">
-            <div class="st-portfolio-item">
-              <a href="assets/img/portfolio/noor.jpeg" class="st-portfolio st-zoom st-lightbox-item">
-                <div class="st-portfolio-img st-zoom-in">
-                  <img src="assets/img/portfolio/noor.jpeg" alt="portfolio">
-                </div>
-                <div class="st-portfolio-item-hover">
-                  <i class="fas fa-plus-circle"></i>
-                  <h5>Noor Stars</h5>
-                  <p>Influencers / Modeling</p>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="st-portfolio-single st-style1 st-lightgallery">
-            <div class="st-portfolio-item">
-              <a href="assets/img/portfolio/amy.jpeg" class="st-portfolio st-zoom st-lightbox-item">
-                <div class="st-portfolio-img st-zoom-in">
-                  <img src="assets/img/portfolio/amy.jpeg" alt="portfolio">
-                </div>
-                <div class="st-portfolio-item-hover">
-                  <i class="fas fa-plus-circle"></i>
-                  <h5>Amy Roko</h5>
-                  <p>Influencers / Modeling</p>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row st-portfolio-loading-display-none">
-
-
-        <!-- new -->
-
-      </div>
-      <div class="row st-portfolio-loading-display-none">
-        <div class="col-lg-4 col-md-6">
-          <div class="st-portfolio-single st-style1 st-lightgallery">
-            <div class="st-portfolio-item">
-              <a href="assets/img/portfolio/new/rasem.jpg" class="st-portfolio st-zoom st-lightbox-item">
-                <div class="st-portfolio-img st-zoom-in">
-                  <img src="assets/img/portfolio/new/rasem.jpg" alt="portfolio">
-                </div>
-                <div class="st-portfolio-item-hover">
-                  <i class="fas fa-plus-circle"></i>
-                  <h5>Rasem</h5>
-                  <p>Influencers / Modeling</p>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="st-portfolio-single st-style1 st-lightgallery">
-            <div class="st-portfolio-item">
-              <a href="assets/img/portfolio/baneen.jpeg" class="st-portfolio st-zoom st-lightbox-item">
-                <div class="st-portfolio-img st-zoom-in">
-                  <img src="assets/img/portfolio/baneen.jpeg" alt="portfolio">
-                </div>
-                <div class="st-portfolio-item-hover">
-                  <i class="fas fa-plus-circle"></i>
-                  <h5>Baneen Stars</h5>
-                  <p>Influencers / Modeling</p>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="st-portfolio-single st-style1 st-lightgallery">
-            <div class="st-portfolio-item">
-              <a href="assets/img/portfolio/lojain.jpeg" class="st-portfolio st-zoom st-lightbox-item">
-                <div class="st-portfolio-img st-zoom-in">
-                  <img src="assets/img/portfolio/lojain.jpeg" alt="portfolio">
-                </div>
-                <div class="st-portfolio-item-hover">
-                  <i class="fas fa-plus-circle"></i>
-                  <h5>Lojain omran</h5>
-                  <p>Influencers / Modeling</p>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="st-portfolio-single st-style1 st-lightgallery">
-            <div class="st-portfolio-item">
-              <a href="assets/img/portfolio/new/helmt.jpg" class="st-portfolio st-zoom st-lightbox-item">
-                <div class="st-portfolio-img st-zoom-in">
-                  <img src="assets/img/portfolio/new/helmt.jpg" alt="portfolio">
-                </div>
-                <div class="st-portfolio-item-hover">
-                  <i class="fas fa-plus-circle"></i>
-                  <h5>Helmt</h5>
-                  <p>Influencers / Modeling</p>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- <div class="col-lg-12 text-center">
-          <div class="st-portfolio-btn">
-            <a href="#" class="st-btn st-style1 st-color1">Load More</a>
-          </div>
-        </div> -->
-      </div>
-
-
     </div>
     <div class="st-height-b100 st-height-lg-b80"></div>
   </section>
