Add custom gallery structure to index.html and enhance gallery initialization in data.js; update event handling for portfolio items.

--- a/index.html
+++ b/index.html
@@ -666,6 +666,21 @@
   <script src="assets/js/particles.min.js"></script>
   <script src="assets/js/data.js"></script>
   <script src="assets/js/main.js"></script>
+
+  <!-- Gallery Structure -->
+  <div class="custom-gallery">
+    <div class="gallery-overlay"></div>
+    <div class="gallery-content">
+      <button class="gallery-close">&times;</button>
+      <button class="gallery-prev">&lt;</button>
+      <button class="gallery-next">&gt;</button>
+      <div class="gallery-media"></div>
+      <div class="gallery-caption">
+        <h3></h3>
+        <p></p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
