Add logo slider section to index.html and implement corresponding styles in style.css; enhance user engagement with animated logo display.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,50 @@
   </section>
   <!-- End About Seciton -->
 
+  <!-- Start Logo Slider Section -->
+  <section class="st-logo-slider">
+    <div class="st-height-b50 st-height-lg-b30"></div>
+    <div class="container">
+      <div class="st-logo-slider-wrap">
+        <div class="st-logo-slider-track">
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo1.png" alt="Logo 1">
+          </div>
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo2.png" alt="Logo 2">
+          </div>
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo3.png" alt="Logo 3">
+          </div>
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo4.png" alt="Logo 4">
+          </div>
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo5.png" alt="Logo 5">
+          </div>
+          <!-- Duplicate slides for seamless loop -->
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo1.png" alt="Logo 1">
+          </div>
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo2.png" alt="Logo 2">
+          </div>
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo3.png" alt="Logo 3">
+          </div>
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo4.png" alt="Logo 4">
+          </div>
+          <div class="st-logo-slide">
+            <img src="assets/img/logos/logo5.png" alt="Logo 5">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="st-height-b50 st-height-lg-b30"></div>
+  </section>
+  <!-- End Logo Slider Section -->
+
   <!-- Start Service Seciton -->
   <section>
     <div class="st-height-b100 st-height-lg-b80"></div>
