Enhance hero section in index.html with a new logo slider for improved branding visibility; update styles in style.css for responsive design. Comment out unused portfolio video entries in data.js to streamline content presentation.

--- a/index.html
+++ b/index.html
@@ -72,31 +72,62 @@
       <div class="container">
         <div class="st-hero-text">
           <h3>Hello, I'm</h3>
-          <h1>Ali Ahmed <br>Muhsin
+          <h1>Ali Ahmed Muhsin
           </h1>
           <h2>Videographer / Photographer</h2>
           <div class="st-hero-btn">
             <a href="#contact" class="st-btn st-style1 st-color1 st-smooth-move">Hire me</a>
+          </div>
+          <!-- Logo Slider in Hero Section -->
+          <div class="st-hero-logo-slider">
+            <div class="st-logo-slider-wrap">
+              <div class="st-logo-slider-track">
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo1.png" alt="Logo 1">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo2.png" alt="Logo 2">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo3.png" alt="Logo 3">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo4.png" alt="Logo 4">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo5.png" alt="Logo 5">
+                </div>
+                <!-- Duplicate slides for seamless loop -->
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo1.png" alt="Logo 1">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo2.png" alt="Logo 2">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo3.png" alt="Logo 3">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo4.png" alt="Logo 4">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logos/logo5.png" alt="Logo 5">
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <!-- Hero Image - Social Link Group -->
     <div class="st-hero-img st-to-right">
-      <img class="wow fadeInRight" src="assets/img/section/IMG_1683.PNG" alt="Hero">
+      <!-- <img class="wow fadeInRight" src="assets/img/section/IMG_1683.PNG" alt="Hero"> -->
+
       <div class="st-social-group wow fadeInLeft">
         <div class="st-social-link">
-          <a href="https://www.facebook.com/aloo.cent" class="st-social-btn active">
-            <span class="st-social-icon"><i class="fab fa-facebook"></i></span>
-            <span class="st-icon-name">Facebook</span>
-          </a>
           <a href="https://www.instagram.com/swaggyink" class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-instagram"></i></span>
             <span class="st-icon-name">Instagram</span>
-          </a>
-          <a href="https://twitter.com/swaggyink1" class="st-social-btn">
-            <span class="st-social-icon"><i class="fab fa-twitter"></i></span>
-            <span class="st-icon-name">Twitter</span>
           </a>
           <a href="https://www.linkedin.com/in/ali-ahmed-muhsin-4a8823160?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
             class="st-social-btn">
@@ -105,7 +136,7 @@
           </a>
           <a href="https://www.tiktok.com/@thirteen.31?_t=8lnvWQXpkZU&_r=1" class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-tiktok"></i></span>
-            <span class="st-icon-name">Toktok</span>
+            <span class="st-icon-name">Tiktok</span>
           </a>
 
         </div>
@@ -163,49 +194,7 @@
   </section>
   <!-- End About Seciton -->
 
-  <!-- Start Logo Slider Section -->
-  <section class="st-logo-slider">
-    <div class="st-height-b50 st-height-lg-b30"></div>
-    <div class="container">
-      <div class="st-logo-slider-wrap">
-        <div class="st-logo-slider-track">
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo1.png" alt="Logo 1">
-          </div>
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo2.png" alt="Logo 2">
-          </div>
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo3.png" alt="Logo 3">
-          </div>
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo4.png" alt="Logo 4">
-          </div>
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo5.png" alt="Logo 5">
-          </div>
-          <!-- Duplicate slides for seamless loop -->
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo1.png" alt="Logo 1">
-          </div>
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo2.png" alt="Logo 2">
-          </div>
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo3.png" alt="Logo 3">
-          </div>
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo4.png" alt="Logo 4">
-          </div>
-          <div class="st-logo-slide">
-            <img src="assets/img/logos/logo5.png" alt="Logo 5">
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="st-height-b50 st-height-lg-b30"></div>
-  </section>
-  <!-- End Logo Slider Section -->
+
 
   <!-- Start Service Seciton -->
   <section>
@@ -679,7 +668,7 @@
                 </a>
                 <a href="https://www.tiktok.com/@thirteen.31?_t=8lnvWQXpkZU&_r=1" class="st-social-btn">
                   <span class="st-social-icon"><i class="fab fa-tiktok"></i></span>
-                  <span class="st-icon-name">Toktok</span>
+                  <span class="st-icon-name">Tiktok</span>
                 </a>
               </div>
             </div>
